--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1459,188 +1459,62 @@ html {
 @font-face {
   font-family: "Raleway";
   font-style: normal;
-  font-weight: 100;
-  src: url("../fonts/Raleway/Raleway-Thin.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Raleway";
-  font-style: italic;
-  font-weight: 100;
-  src: url("../fonts/Raleway/Raleway-ThinItalic.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 200;
-  src: url("../fonts/Raleway/Raleway-ExtraLight.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Raleway";
-  font-style: italic;
-  font-weight: 200;
-  src: url("../fonts/Raleway/Raleway-ExtraLightItalic.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 300;
-  src: url("../fonts/Raleway/Raleway-Light.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Raleway";
-  font-style: italic;
-  font-weight: 300;
-  src: url("../fonts/Raleway/Raleway-LightItalic.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Raleway";
-  font-style: normal;
   font-weight: 400;
-  src: url("../fonts/Raleway/Raleway-Regular.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Raleway";
-  font-style: italic;
-  font-weight: 400;
-  src: url("../fonts/Raleway/Raleway-RegularItalic.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 500;
-  src: url("../fonts/Raleway/Raleway-Medium.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Raleway";
-  font-style: italic;
-  font-weight: 500;
-  src: url("../fonts/Raleway/Raleway-MediumItalic.ttf") format("truetype"); }
+  src: url("../fonts/Raleway/Raleway-Regular.woff") format("woff"); }
 
 @font-face {
   font-family: "Raleway";
   font-style: normal;
   font-weight: 600;
-  src: url("../fonts/Raleway/Raleway-SemiBold.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Raleway";
-  font-style: italic;
-  font-weight: 600;
-  src: url("../fonts/Raleway/Raleway-SemiBoldItalic.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Raleway";
-  font-style: normal;
-  font-weight: 700;
-  src: url("../fonts/Raleway/Raleway-Bold.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Raleway";
-  font-style: italic;
-  font-weight: 700;
-  src: url("../fonts/Raleway/Raleway-BoldItalic.ttf") format("truetype"); }
+  src: url("../fonts/Raleway/Raleway-SemiBold.woff") format("woff"); }
 
 @font-face {
   font-family: "Raleway";
   font-style: normal;
   font-weight: 800;
-  src: url("../fonts/Raleway/Raleway-ExtraBold.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Raleway";
-  font-style: italic;
-  font-weight: 800;
-  src: url("../fonts/Raleway/Raleway-ExtraBoldItalic.ttf") format("truetype"); }
+  src: url("../fonts/Raleway/Raleway-ExtraBold.woff") format("woff"); }
 
 @font-face {
   font-family: "Raleway";
   font-style: normal;
   font-weight: 900;
-  src: url("../fonts/Raleway/Raleway-Black.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Raleway";
-  font-style: italic;
-  font-weight: 900;
-  src: url("../fonts/Raleway/Raleway-BlackItalic.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Source Sans Pro";
-  font-style: normal;
-  font-weight: 200;
-  src: url("../fonts/Source_Sans_Pro/SourceSansPro-ExtraLight.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Source Sans Pro";
-  font-style: italic;
-  font-weight: 200;
-  src: url("../fonts/Source_Sans_Pro/SourceSansPro-ExtraLightItalic.ttf") format("truetype"); }
+  src: url("../fonts/Raleway/Raleway-Black.woff") format("woff"); }
 
 @font-face {
   font-family: "Source Sans Pro";
   font-style: normal;
   font-weight: 300;
-  src: url("../fonts/Source_Sans_Pro/SourceSansPro-Light.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Source Sans Pro";
-  font-style: italic;
-  font-weight: 300;
-  src: url("../fonts/Source_Sans_Pro/SourceSansPro-LightItalic.ttf") format("truetype"); }
+  src: url("../fonts/Source_Sans_Pro/SourceSansPro-Light.woff") format("woff"); }
 
 @font-face {
   font-family: "Source Sans Pro";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/Source_Sans_Pro/SourceSansPro-Regular.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Source Sans Pro";
-  font-style: italic;
-  font-weight: 400;
-  src: url("../fonts/Source_Sans_Pro/SourceSansPro-RegularItalic.ttf") format("truetype"); }
+  src: url("../fonts/Source_Sans_Pro/SourceSansPro-Regular.woff") format("woff"); }
 
 @font-face {
   font-family: "Source Sans Pro";
   font-style: normal;
   font-weight: 600;
-  src: url("../fonts/Source_Sans_Pro/SourceSansPro-SemiBold.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Source Sans Pro";
-  font-style: italic;
-  font-weight: 600;
-  src: url("../fonts/Source_Sans_Pro/SourceSansPro-SemiBoldItalic.ttf") format("truetype"); }
+  src: url("../fonts/Source_Sans_Pro/SourceSansPro-SemiBold.woff") format("woff"); }
 
 @font-face {
   font-family: "Source Sans Pro";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/Source_Sans_Pro/SourceSansPro-Bold.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Source Sans Pro";
-  font-style: italic;
-  font-weight: 700;
-  src: url("../fonts/Source_Sans_Pro/SourceSansPro-BoldItalic.ttf") format("truetype"); }
+  src: url("../fonts/Source_Sans_Pro/SourceSansPro-Bold.woff") format("woff"); }
 
 @font-face {
   font-family: "Source Sans Pro";
   font-style: normal;
   font-weight: 900;
-  src: url("../fonts/Source_Sans_Pro/SourceSansPro-Black.ttf") format("truetype"); }
-
-@font-face {
-  font-family: "Source Sans Pro";
-  font-style: italic;
-  font-weight: 900;
-  src: url("../fonts/Source_Sans_Pro/SourceSansPro-BlackItalic.ttf") format("truetype"); }
+  src: url("../fonts/Source_Sans_Pro/SourceSansPro-Black.woff") format("woff"); }
 
 @font-face {
   font-family: "Fontello";
   font-style: normal;
   font-weight: normal;
-  src: url("../fonts/Fontello/Fontello.ttf") format("truetype"); }
+  src: url("../fonts/Fontello/Fontello.woff") format("woff"); }
 
 .heading {
   font-family: "Raleway";
@@ -2716,7 +2590,8 @@ body {
     .heading-separator__line-reduced-2 {
       width: 15%; }
     .heading-separator__line-bolded-3 {
-      height: 3px; }
+      height: 3px;
+      margin-top: -1px; }
     .heading-separator__line.black {
       background-color: #000; }
     .heading-separator__line.white {
