--- a/src/templates/components/sections/_about-me-experiences-courses.pug
+++ b/src/templates/components/sections/_about-me-experiences-courses.pug
@@ -21,8 +21,8 @@
                             p.timeline-point-description.ending= obj.description
                         else
                             p.timeline-point-description= obj.description
-                            a(href=obj.link target="_blank" class="info-link timeline-point-link ending")= obj.link
-                                span(aria-hidden="true" class="icon icon-" + obj.linkIconName + " color-" + obj.linkIconColor + " info-icon")
+                            a(href=obj.link.href target="_blank" class="info-link timeline-point-link ending")= obj.link.displayedText
+                                span(aria-hidden="true" class="icon icon-" + obj.link.iconName + " color-" + obj.link.iconColor + " info-icon")
                 else
                     li.timeline-point
                         span.timeline-point-period.beginning= obj.period
@@ -31,5 +31,5 @@
                             p.timeline-point-description.ending= obj.description
                         else
                             p.timeline-point-description= obj.description
-                            a(href=obj.link target="_blank" class="info-link timeline-point-link ending")= obj.link
-                                span(aria-hidden="true" class="icon icon-" + obj.linkIconName + " color-" + obj.linkIconColor + " info-icon")
+                            a(href=obj.link.href target="_blank" class="info-link timeline-point-link ending")= obj.link.displayedText
+                                span(aria-hidden="true" class="icon icon-" + obj.link.iconName + " color-" + obj.link.iconColor + " info-icon")
