--- a/src/templates/layout/_footer.pug
+++ b/src/templates/layout/_footer.pug
@@ -10,30 +10,26 @@ footer.main-footer
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
                 ul.main-footer__list
                     li
-                        a(href="#" class="main-footer__link") Lorem ipsum ...
+                        a(href="https://github.com/mateuszarchicinski/TDD-Helpdesk-Web-App-Project" class="main-footer__link") Helpdesk - Aplikacja internetowa
                     li
-                        a(href="#" class="main-footer__link") Lorem ipsum ...
+                        a(href="https://github.com/mateuszarchicinski/Github-Issues-Application" class="main-footer__link") Github Issues Application
                     li
-                        a(href="#" class="main-footer__link") Lorem ipsum ...
+                        a(href="https://github.com/mateuszarchicinski/Restful-API--NodeJS-ExpressJS" class="main-footer__link") Restful API - NodeJS & ExpressJS
                     li
-                        a(href="#" class="main-footer__link") Lorem ipsum ...
+                        a(href="https://github.com/mateuszarchicinski/Angular1.x-Template" class="main-footer__link") Angular 1.x - Template
                     li
-                        a(href="#" class="main-footer__link") Lorem ipsum ...
+                        a(href="https://github.com/mateuszarchicinski/Kickstart-Templates" class="main-footer__link") Kickstart Templates
             .col-12.col-md-4
                 h3.heading.heading-5.main-footer-col-title.text-center= data.mainFooter.recentChanges.h3
                 .heading-separator
                     .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.accent
                 ul.main-footer__list
                     li
-                        a(href="#" class="main-footer__link") Lorem ipsum ...
+                        a(href="https://github.com/mateuszarchicinski/mateusz-archicinski.pl/commit/7dc0ed7f82998c6b7248787e4a9cd4c85b06657a" class="main-footer__link") Initial commit
                     li
-                        a(href="#" class="main-footer__link") Lorem ipsum ...
+                        a(href="https://github.com/mateuszarchicinski/TDD-Helpdesk-Web-App-Project/commit/4b0e8fdfa351e48b90bbb2220e58785c78ddd071" class="main-footer__link") Readme - Project name changed
                     li
-                        a(href="#" class="main-footer__link") Lorem ipsum ...
-                    li
-                        a(href="#" class="main-footer__link") Lorem ipsum ...
-                    li
-                        a(href="#" class="main-footer__link") Lorem ipsum ...
+                        a(href="https://github.com/mateuszarchicinski/Github-Issues-Application/commit/ef1d8f410f20bce3fb2ec1ee5ff14884da2029b4" class="main-footer__link") Removed spaces between osx buttons
             .col-12.col-md-4.row.no-gutters.flex-column
                 h3.heading.heading-5.main-footer-col-title.text-center= data.mainFooter.findMe.h3
                 .heading-separator
