--- a/src/sass/components/_portfolio.scss
+++ b/src/sass/components/_portfolio.scss
@@ -48,6 +48,7 @@ $portfolio-filters__button__active__border-color: $primary-color !default;
     &-items {
         height: 0;
         position: relative;
+        transform: perspective(1px);
         overflow: hidden;
         transition: 0.3s height ease-in-out;
     }
