--- a/src/sass/components/_services.scss
+++ b/src/sass/components/_services.scss
@@ -37,7 +37,8 @@ $services-1-item__border: 1px solid rgba($color__black-1, 0.1) !default;
             margin-top: 15px;
         }
         &-description {
-            
+            max-height: 253px;
+            @extend %ellipsis;
         }
         &-button {
             background-color: transparent;
