--- a/src/templates/components/sections/_portfolio.pug
+++ b/src/templates/components/sections/_portfolio.pug
@@ -38,5 +38,5 @@ section(id="portfolio" class="section portfolio-wrapper")
                                                 .heading-separator__line.heading-separator__line-reduced-2.heading-separator__line-bolded-3.primary
                                             p.paragraph.ending.single-project-description!= project.description
                                             .single-project-buttons
-                                                a(href=project.buttons[0].link class="btn to-top color-white")= project.buttons[0].value
-                                                a(href=project.buttons[1].link class="btn to-top btn-primary")= project.buttons[1].value
+                                                a(href=project.buttons[0].link target="_blank" class="btn to-top color-white")= project.buttons[0].value
+                                                a(href=project.buttons[1].link target="_blank" class="btn to-top btn-primary")= project.buttons[1].value
