--- a/src/sass/helpers/_colors.scss
+++ b/src/sass/helpers/_colors.scss
@@ -36,6 +36,10 @@ $color__silver:      #bdbdbd;
 $color__snow:        #fafafa;
 
 
+// Component colors - Github user info
+$color__gold:        #ffd700;
+
+
 // Defaults Colors
 // input:focus - the same on all browsers
 $color__cornflower-blue: #4d90fe;
