--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -172,3 +172,7 @@
     // *--------- MODAL ---------*
     @import 'components/modal';
 
+
+    // *--------- BADGE ---------*
+    @import 'components/badge';
+
